Ajout de la gestion des pilotes et des étudiants, mise à jour des styles et des routes associées dans l'interface d'administration.

--- a/fastintern-site/src/Views/Admin/index.twig
+++ b/fastintern-site/src/Views/Admin/index.twig
@@ -24,22 +24,20 @@
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Offres</button>
                     <div class="dropdown-content">
-                        <a href="?uri=admin_offres">Gérer Offres</a>
-                        <a href="#">Voir Offres</a>
+                        <a href="?uri=admin_offres">Gérer les offres</a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Entreprises</button>
                     <div class="dropdown-content">
-                        <a href="/?uri=admin_entreprises">Gérer Entreprises</a>
-                        <a href="#">Voir Entreprises</a>
+                        <a href="/?uri=admin_entreprises">Gérer les entreprises</a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Utilisateurs</button>
                     <div class="dropdown-content">
-                        <a href="#">Gérer Étudiants</a>
-                        <a href="#">Gérer Pilotes</a>
+                        <a href="?uri=admin_etudiants">Gérer les étudiants</a>
+                        <a href="?uri=admin_pilotes">Gérer les pilotes</a>
                     </div>
                 </div>
             </nav>
