--- a/fastintern-site/src/Views/entreprise/entreprise.twig
+++ b/fastintern-site/src/Views/entreprise/entreprise.twig
@@ -18,17 +18,32 @@
     <nav>
         <ul>
             <li>
-                <a href="/">Accueil</a>
-                <a href="/index.php?uri=offres">Offres de stage</a>
-                <a href="/index.php?uri=entreprise">Entreprises</a>
-                <a href="/index.php?uri=candidatures">Candidatures</a>
+                {% if session.role_id == 3 %}
+                    <a href="/?uri=etudiant">Accueil</a>
+                    <a href="/?uri=offres">Offres de stage</a>
+                    <a href="/?uri=entreprise" class="active">Entreprises</a>
+                {% elseif session.role_id is not defined %}
+                    <a href="/">Accueil</a>
+                    <a href="/?uri=offres">Offres de stage</a>
+                    <a href="/?uri=entreprise" class="active">Entreprises</a>
+                {% endif %}
             </li>
         </ul>
     </nav>
 
     <!-- Bouton Connexion seul à droite -->
     <div class="nav-connexion">
-        <a href="/index.php?uri=connexion">Connexion</a>
+        {% if session.user_id is defined %}
+            {% if session.role_id == 3 %}
+                <a href="/?uri=etudiant_profil">Mon Profil</a>
+            {% elseif session.role_id == 2 %}
+                <a href="/?uri=pilote_profil">Mon Profil</a>
+            {% elseif session.role_id == 1 %}
+                <a href="/?uri=admin_profil">Mon Profil</a>
+            {% endif %}
+        {% else %}
+            <a href="/?uri=connexion">Connexion</a>
+        {% endif %}
     </div>
 </header>
 
