--- a/fastintern-site/src/Views/Pilote/index.twig
+++ b/fastintern-site/src/Views/Pilote/index.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Admin - FastIntern</title>
+    <title>Dashboard Pilote - FastIntern</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="http://fastintern-static.local/static/css/Admin/home.css">
@@ -24,21 +24,21 @@
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Offres</button>
                     <div class="dropdown-content">
-                        <a href="#">Gérer Offres</a>
+                        <a href="?uri=pilote_offres">Gérer Offres</a>
                         <a href="#">Voir Offres</a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Entreprises</button>
                     <div class="dropdown-content">
-                        <a href="#">Gérer Entreprises</a>
+                        <a href="?uri=pilote_entreprises">Gérer Entreprises</a>
                         <a href="#">Voir Entreprises</a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Utilisateurs</button>
                     <div class="dropdown-content">
-                        <a href="#">Gérer Étudiants</a>
+                        <a href="?uri=pilote_etudiants">Gérer Étudiants</a>
                     </div>
                 </div>
             </nav>
