--- a/fastintern-site/src/Views/Etudiant/index.twig
+++ b/fastintern-site/src/Views/Etudiant/index.twig
@@ -23,6 +23,7 @@
                 <a class="btn-accueil" href="/?uri=etudiant">Accueil</a>
                 <a class="btn-accueil" href="/?uri=offres">Voir Offres</a>
                 <a class="btn-accueil" href="/?uri=entreprise">Voir Entreprises</a>
+                <a class="btn-accueil" href="/?uri=erreur">Wishlist</a>
             </nav>
             
             <div class="profile-container">
