--- a/fastintern-site/src/Views/Etudiant/offre_detail.twig
+++ b/fastintern-site/src/Views/Etudiant/offre_detail.twig
@@ -113,9 +113,9 @@
                     <div class="footer-column">
                         <h3>Mentions légales</h3>
                         <ul>
-                            <li><a href="#">Informations légales</a></li>
-                            <li><a href="#">CGU</a></li>
-                            <li><a href="#">Politique de confidentialité</a></li>
+                            <li><a href="?uri=infos_legales">Informations légales</a></li>
+                            <li><a href="?uri=cgu">CGU</a></li>
+                            <li><a href="?uri=politique_confidentialite">Politique de confidentialité</a></li>
                             <li><a href="#">Aide et contact</a></li>
                         </ul>
                     </div>
